syntax = "proto3";

import "google/protobuf/timestamp.proto";

package ChatRoomDemo;

// Agent state for chat participants
message ChatUserState {
    string user_name = 1;
    string room_id = 2;
    google.protobuf.Timestamp joined_at = 3;
    int32 message_count = 4;
    bool is_moderator = 5;
    repeated string muted_users = 6;
}

// Agent state for chat room
message ChatRoomState {
    string room_id = 1;
    string room_name = 2;
    google.protobuf.Timestamp created_at = 3;
    int32 participant_count = 4;
    repeated string participants = 5;
    repeated string banned_users = 6;
    int32 total_messages = 7;
    string topic = 8;
}

// Events
message UserJoinedEvent {
    string user_id = 1;
    string user_name = 2;
    string room_id = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message UserLeftEvent {
    string user_id = 1;
    string user_name = 2;
    string room_id = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message ChatMessageEvent {
    string user_id = 1;
    string user_name = 2;
    string message = 3;
    string room_id = 4;
    google.protobuf.Timestamp timestamp = 5;
    bool is_private = 6;
    string target_user_id = 7; // For private messages
}

message UserTypingEvent {
    string user_id = 1;
    string user_name = 2;
    bool is_typing = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message RoomAnnouncementEvent {
    string message = 1;
    string announced_by = 2;
    google.protobuf.Timestamp timestamp = 3;
    int32 priority = 4; // 0: info, 1: warning, 2: critical
}

message UserBannedEvent {
    string user_id = 1;
    string user_name = 2;
    string banned_by = 3;
    string reason = 4;
    google.protobuf.Timestamp timestamp = 5;
}
